--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css" type="text/css">
     <title>Expensify</title>
 </head>
 
@@ -12,7 +13,7 @@
     <div id="app">
 
     </div>
-    <script src="bundle.js"></script>
+    <script src="/bundle.js"></script>
 </body>
 
 </html>
